# daydream

./: .gitignore  CAPTURE_PROBE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TASK.md  pyproject.toml
.beagle/concepts/enriched-pr-comment/: phase-labels-decision.md  spec.md
.beagle/concepts/upload-sinks/: spec.md
.claude/skills/rerun-review-bot-bench/: SKILL.md
.claude/skills/resume-run/: SKILL.md
.entire/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  daydream-command.yml  daydream-post.yml  daydream-review.yml  package.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-exploration-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
bench/benchmark-report/: .gitignore  build.py  template.html
bench/review-bot-compare/: .gitignore  README.md  common.py  compare.py  harvest.py  judge.py  replay.py  test_replay.py
daydream/: __init__.py  __main__.py  agent.py  bot_setup.py  cli.py  clipboard.py  config.py  config_file.py  exploration.py  exploration_runner.py  file_group_budget.py  findings.py  git_ops.py  github_app.py  json_utils.py  phases.py  pr_comment_renderer.py  pr_review.py  pricing.py  reconcile.py  runner.py  summarize.py  supervision.py  timeutil.py  trajectory.py  tree_sitter_index.py  ui.py  workspace.py
daydream/archive/: __init__.py  _schema.py  git_context.py  index.py  manifest.py
daydream/atif/: NOTICE  __init__.py  validator.py
daydream/backends/: __init__.py  _subprocess.py  claude.py  codex.py  pi.py
daydream/benchmark/: __init__.py  acquire.py  anthropic_score.py  benchmark_data.py  cli.py  config.py  corpus.py  daydream_run.py  harvest.py  judge.py  mapping.py  orchestrator.py  prs.py  report.py  score.py  stats.py  trial_isolation.py
daydream/deep/: __init__.py  arbiter.py  artifacts.py  dedup.py  detection.py  orchestrator.py  prompts.py  render.py
daydream/eval/: __init__.py  __main__.py  analyzer.py  pr_feedback.py
daydream/extensions/: __init__.py  api.py  builtins.py  loader.py  registry.py
daydream/flows/: __init__.py  engine.py  pr_feedback.py  review.py  shallow.py
daydream/improve/: __init__.py  artifacts.py  assemble.py  command_contract.py  orchestrator.py  partition.py  plans.py  prioritize.py  prompts.py  render.py  repo_commands.py  services.py
daydream/prompts/: __init__.py  exploration_subagents.py  grounding.py  review_system_prompt.py
daydream/rlm/: __init__.py  container.py  environment.py  errors.py  history.py  ipc.py  repl.py  runner.py
daydream/templates/: __init__.py
daydream/training/: __init__.py  backfill_cache.py  base_sha.py  corpus.py  exclusion.py  export.py  harvest.py  labeler.py  labeler_signals.py  reward.py  rubric.py  schema.py  snapshot.py
daydream/ui/: __init__.py  agent_text.py  colorize.py  console.py  messages.py  panels.py  summary.py  theme.py  tools.py
docs/: benchmark.md  evaluation-framework.md  extensions.md  self-hosted-bot-setup.md
docs/plans/: 2026-02-01-integration-test-design.md  2026-02-01-repository-restructure-design.md  2026-02-01-rlm-code-review-design.md  2026-02-01-skill-panel-collapse-design.md  2026-02-01-unified-live-tool-panels-design.md  2026-02-06-codex-backend-design.md  2026-02-07-codex-backend-implementation.md  2026-02-07-pr-feedback-mode-design.md  2026-02-09-continuous-loop-design.md  2026-02-09-continuous-loop-impl.md  2026-02-21-go-review-design.md  2026-02-22-trust-the-technology-design.md  2026-02-22-trust-the-technology.md  2026-04-30-worktree-isolation-and-mode-consolidation.md  2026-06-21-pi-backend.md  2026-07-14-ci-log-mode.md
docs/reference/: atif_format.md
docs/testing/: test-plan.yaml
scripts/: _demo_common.py  batch-eval  capture-codex-golden.sh  demo_edit_surgery.py  demo_edit_ui.py  demo_fix.py  demo_neon_progress.py  demo_parse.py  demo_review.py  demo_test.py  redrive_post.py  review-historic-pr  run_demo_python.py  zip-review.sh
scripts/hooks/: pre-commit  pre-push
templates/workflows/: README.md  daydream-command.yml
tests/: conftest.py  test_agent.py  test_agent_budget.py  test_agent_detect_success.py  test_agent_recorder_integration.py  test_agent_retry.py  test_agent_structured_render.py  test_analyzer.py  test_arbiter.py  test_arbiter_prose_extraction.py  test_archive.py  test_archive_data_capture.py  test_archive_integration.py  test_atif_vendor_smoke.py  test_backend_claude.py  test_backend_claude_metrics.py  test_backend_codex.py  test_backend_codex_metrics.py  test_backend_conformance.py  test_backend_pi.py  test_backend_realpath_parity.py  test_backend_stream_idle.py  test_backends_events.py  test_backends_init.py  test_benchmark_acquire.py  test_benchmark_anthropic_score.py  test_benchmark_cli.py  test_benchmark_corpus.py  test_benchmark_data.py  test_benchmark_daydream_run.py  test_benchmark_e2e.py  test_benchmark_fidelity.py  test_benchmark_harvest.py  test_benchmark_harvested_e2e.py  test_benchmark_judge.py  test_benchmark_mapping.py  test_benchmark_orchestrator.py  test_benchmark_prs.py  test_benchmark_report.py  test_benchmark_report_build.py  (+112 more)
tests/contract/: __init__.py  _loaders.py  test_backend_codex_trajectory.py  test_backend_step_parity.py
tests/harness/: __init__.py  codex_replay.py  fake_gh.py  git_helpers.py  improve_backend.py  phase_backend.py  phase_replay.py  pi_replay.py  scripts.py  test_codex_replay.py  test_phase_backend.py  test_phase_replay.py  test_scripts.py
tests/rlm/: __init__.py  test_container.py  test_environment.py  test_errors.py  test_history.py  test_ipc.py  test_repl.py  test_runner.py  test_runner_integration.py
(+174 files in other folders)
