[project]
name = "daydream"
version = "0.19.0"
description = "Automated code review and fix loop using Claude"
requires-python = ">=3.12.13"
dependencies = [
    "claude-agent-sdk==0.1.72",
    "anyio>=4.0",
    "rich>=13.0",
    "pyfiglet>=1.0",
    "pydantic>=2.11.7",
    "PyJWT>=2.0",
    "jsonschema>=4.0",
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-go==0.25.0",
    "tree-sitter-rust==0.24.2",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.6",
    "pyyaml>=6.0",
    "ruff>=0.9",
    "types-pyyaml>=6.0",
]

[project.scripts]
daydream = "daydream.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly declare the source package and all non-Python package data so the
# distribution contract does not rely on hatchling's default discovery heuristics.
packages = ["daydream"]
include = [
    "daydream/templates/**",
    "daydream/training/schema/**",
    "daydream/atif/LICENSE",
    "daydream/atif/NOTICE",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Vendored from Harbor v0.5.0; see daydream/atif/NOTICE.
# Mechanical-only edit policy (D-03): no reformatting allowed.
"daydream/atif/**" = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
